--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
       const gifList = [
         "1.gif",
         "2.gif",
+        "3.gif",
+        "4.gif",
       ];
 
       const gifImage = document.getElementById("randomGif");
