--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
         "2.gif",
         "3.gif",
         "4.gif",
+        "5.gif",
+        "6.gif",
+        "7.gif",
+        "8.gif",
       ];
 
       const gifImage = document.getElementById("randomGif");
